# scan-ios-wellness

./: .gitignore  AGENTS.md  README.md  firestore.rules  project.yml
Config/: WellnessLens-Debug.xcconfig  WellnessLens-Release.local.example.xcconfig  WellnessLens-Release.xcconfig  WellnessLens-Shared.xcconfig  WellnessLens-Staging.local.example.xcconfig  WellnessLens-Staging.xcconfig
WellnessLens/: WellnessLensApp.swift
WellnessLens.xcodeproj/: project.pbxproj
WellnessLensTests/: WellnessLensTests.swift
agent-service/: README.md  pyproject.toml
agent-service/app/: __init__.py  coach_runtime.py  contracts.py  main.py  nutrition_extraction.py  prompt_safety.py  scan_verdict_runtime.py  security.py  service.py
agent-service/assets/coach_agent/: CoachReplySchema.json  LILA_CoachGoldenExamples.md  LILA_CoachPrompt.md
agent-service/assets/scan_verdict/: LILA_GoldenExamples.md  LILA_SystemPrompt.md  ScanVerdictSchema.json
agent-service/tests/: test_agent_api.py  test_coach_api.py  test_prompt_injection_hardening.py  test_prompt_safety.py
backend-api/: README.md  pyproject.toml
backend-api/app/: __init__.py  config.py  contracts.py  date_utils.py  main.py  mexico_nutrition.py  product_resolution_semantics.py  product_resolver.py  repository.py  services.py
backend-api/scripts/: export_fixtures.py
backend-api/tests/: test_api.py
backend-api/tests/fixtures/: analysis_envelope.json  daily_home_response.json  history_sync_request.json  memory_item.json  scan_decision.json  user_profile.json
docs/: ADAPTED_PRDS_NEXT.md  AI_OUTPUT_SCHEMA.md  (+15 more)
(+60 files in other folders)
